# Dumpio-dev

./: .gitignore  .prettierignore  CLAUDE.md  PLAN.md  README.md  dumpio_readme.md  dumpio_sdk_docs.md  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  note.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: publish-sdk.yml  release.yml
sdk/: BUILDING.md  README.md  ROADMAP.md
sdk/node/: README.md  index.d.ts  index.js  middleware.d.ts  middleware.js  package.json  serializer.js
sdk/php/: README.md  composer.json
sdk/php/config/: dumpio.php
sdk/php/src/: Dumpio.php  PendingDump.php  Serializer.php  helpers.php
sdk/php/src/Laravel/: DumpioServiceProvider.php
sdk/php/src/Symfony/: DumpioBundle.php
sdk/python/: README.md  pyproject.toml
sdk/python/dumpio_client/: __init__.py  django.py  fastapi.py  flask.py  logging.py  serializer.py
src/main/: dump-manager.ts  index.ts  logger.ts  settings-manager.ts  tcp-server.ts  types.ts
src/main/ingest/: ingest-manager.ts  normalize.ts  types.ts
src/main/ingest/transports/: http-transport.ts  tcp-transport.ts
src/main/security/: guards.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  main.tsx
src/renderer/src/assets/: index.css
src/renderer/src/components/: CommandPalette.tsx  DumpViewer.tsx  Header.tsx  SettingsModal.tsx  Sidebar.tsx
src/renderer/src/contexts/: ThemeContext.tsx
tests/: python-go-test-client.js  send.js  test-context.js  test-exception-client.js  test-types-client.js  test-var-client.js
(+42 files in other folders)
