[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dumpio-client"
version = "0.1.0"
description = "Python client for the Dumpio dump viewer — sends faithful, typed value dumps over HTTP."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["dumpio", "debug", "dump", "dd", "var-dump"]
dependencies = []

[project.optional-dependencies]
django = ["django>=2.2"]
flask = ["flask>=1.1"]
fastapi = ["starlette>=0.14"]

[project.urls]
Homepage = "https://github.com/ondrejnyklicek/dumpio"

[tool.setuptools]
packages = ["dumpio_client"]
